--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -60,10 +60,12 @@
             <div class="about_right">
                 <h2>About <span>Me</span></h2>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, tempora.
-                    asfyastdgui yuasyudjguiyfdssuxg  ywusdgcxbtasdicu wuutsxzooey9sd 
-                    wygd97suigsdiigwdgsixzgd
-                     owhisagdiuyewihsdgwd 
+                    Persuing Bachelor of Technology
+                    students (CSE).
+                    I consider my self a
+                    responsible and hardworking
+                    person.
+                    I am looking foward for an opportunity.
                 </p>
                 <div class="tab" id="tab_link">
                     <p class="tab_links active_link" onclick="opentab('skills')">Skills</p>
